# CPrimes

./: .gitignore  .travis.yml  CMakeLists.txt  CPrimes.sln  Main.cpp  Makefile  Primes.cpp  README.md  core  cprimes.cpp  cprimes.h  test  test.cpp
CPrimes/: CPrimes.cpp  CPrimes.h  CPrimes.vcxproj  CPrimes.vcxproj.filters  DbManager.cpp  DbManager.h  Primes.cpp  Primes.h  ReadMe.txt  packages.config  stdafx.cpp
include/: Primes.hpp
